--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.datasource.url=jdbc:postgresql://localhost/AbaxCRM
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.baseline-on-migrate=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
+spring.sql.init.mode=always
+server.port=8080
